--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>DeadFinder</title>
-  <link rel="img.png">
+  <link rel="favicon.ico">
   <link rel="stylesheet" href="test/protected/css/all.css">
   <link rel="stylesheet" href="test/protected/css/animate.css">
 </head>
