--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
 											<p>OneTap V3</p>
 										</div>
 									</a>
-									<a href="https://blast.hk/threads/35362/" class="ui__link">
+									<a href="https://yadi.sk/d/wibw2yekcbMtjA" class="ui__link">
 										<div class="ui__card ui__card--normal ui__card--second">
-											<p>LokiSA</p>
+											<p>OneTap V2</p>
 										</div>
 									</a>
 									<a href="https://github.com/0niel/Xenforo-2-threads-parser" class="ui__link">
@@ -67,8 +67,8 @@
 				</div>
 			<div> -->
 			<footer class="footer footer--flex">
-				<a href="https://vk.com/onie1" class="footer__link">
-					<img class="footer__link-image footer__link-image--normal" src="img/social/vk-social-network-logo.svg" alt="VK.COM">
+				<a href="https://discord.gg/invite/WjJDGne6DC" class="footer__link">
+					<img class="footer__link-image footer__link-image--normal" src="img/social/vk-social-network-logo.svg" alt="Discord">
 				</a>
 			</footer>
 		</div>
