--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <body>
 	<div class="view-box">	
 	    <div class="container">
-			<h2 style="padding-left: 5%; font-family: 'Raleway', sans-serif; font-weight: 500;"><span style="color: #3498db;"># </span>Python</h2>
+			<h2 style="padding-left: 5%; font-family: 'Raleway', sans-serif; font-weight: 500;"><span style="color: #3498db;"># </span>Soft commuinty</h2>
 	    </div>
 	<div>
 			<main class="main">
