--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 			<div> -->
 			<footer class="footer footer--flex">
 				<a href="https://discord.gg/invite/WjJDGne6DC" class="footer__link">
-					<img class="footer__link-image footer__link-image--normal" src="img/social/vk-social-network-logo.svg" alt="Discord">
+					<img class="footer__link-image footer__link-image--normal" src="img/social/discord.svg" alt="Discord">
 				</a>
 			</footer>
 		</div>
