--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<!-- styles -->
 	<link rel="stylesheet" href="css/main.min.css">
 	<!-- chrome, firefox and opera -->
-  <meta name="theme-color" content="#fff">
+  <meta name="theme-color" content="#474747">
   <!-- windows phone -->
   <meta name="msapplication-navbutton-color" content="#fff">
   <!-- iPhone, iPad -->
