--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
 										<div class="ui__card ui__card--normal ui__card--second">
 											<p>OneTap V2</p>
 										</div>
-									<!--</a>
-									<a href="https://github.com/0niel/Xenforo-2-threads-parser" class="ui__link">
+									</a>
+									<a href="http://hb.iammaddog.ru/sot/PidorG.rar" class="ui__link">
 										<div class="ui__card ui__card--normal ui__card--third">
-											<p>XenForo Parser</p>
+											<p>SOT "PidorG"</p>
 										</div>
 									</a>
 									<a href="https://github.com/0niel/Arizona-RP-VK-Bot-Parser" class="ui__link">
