--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 											<p>OneTap V2</p>
 										</div>
 									</a>
-									<a href="http://hb.iammaddog.ru/sot/PidorG.rar" class="ui__link">
+									<a href="https://yadi.sk/d/oEVkNujU5RR9Bw" class="ui__link">
 										<div class="ui__card ui__card--normal ui__card--third">
 											<p>SOT "PidorG"</p>
 										</div>
@@ -63,7 +63,7 @@
 			</main>
 			 <div class="view-box">	
 				<div class="container">
-					<h2 style="padding-left: 5%; font-family: 'Raleway', sans-serif; font-weight: 500;"><span style="color: #3498db;">PASSWORD: </span>SOFT</h2>
+					<h2 style="padding-left: 5%; font-family: 'Raleway', sans-serif; font-weight: 500;"><span style="color: #3498db;">PASSWORD FOR ARCHIVES: </span>SOFT</h2>
 				</div>
 			<div> 
 			<footer class="footer footer--flex">
