--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 											<p>OneTap V2</p>
 										</div>
 									</a>
-									<a href="https://yadi.sk/d/oEVkNujU5RR9Bw" class="ui__link">
+									<a href="https://yadi.sk/d/4JS_s7wwn0V8Bw" class="ui__link">
 										<div class="ui__card ui__card--normal ui__card--third">
 											<p>SOT "PidorG"</p>
 										</div>
