--- a/index.html
+++ b/index.html
@@ -35,17 +35,17 @@
 						<div class="main__row">
 							<div class="main__cards">
 								<div class="ui__cards-row">
-									<a href="https://yadi.sk/d/eLI_u1q9C9r3tg" class="ui__link">
+									<a href="../download/OTCv3.7z" class="ui__link">
 										<div class="ui__card ui__card--normal ui__card--first">
 											<p>OneTap V3</p>
 										</div>
 									</a>
-									<a href="https://yadi.sk/d/wibw2yekcbMtjA" class="ui__link">
+									<a href="../download/OTCv2.7z" class="ui__link">
 										<div class="ui__card ui__card--normal ui__card--second">
 											<p>OneTap V2</p>
 										</div>
 									</a>
-									<a href="https://yadi.sk/d/4JS_s7wwn0V8Bw" class="ui__link">
+									<a href="../download/SOT.7z" class="ui__link">
 										<div class="ui__card ui__card--normal ui__card--third">
 											<p>SOT "PidorG"</p>
 										</div>
