--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<!-- preview image for search engines and social websites -->
 	<meta property="og:image" content="img/og-image.jpg">
+	<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 	<link rel="manifest" href="/manifest.json">
 	<meta name="msapplication-TileColor" content="#ffffff">
 	<meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
@@ -22,7 +23,6 @@
 
 	<title>Soft</title>
 </head>
-
 <body>
 	<div class="view-box">	
 	    <div class="container">
@@ -91,6 +91,17 @@
 			</footer>
 		</div>
 	</div>
+
+  <script>
+    document.oncontextmenu = cmenu;
+    function cmenu() {
+      return false;
+    }
+  </script>
+
+<audio controls preload="auto">
+ <source src="msc.mp3" type="audio/mpeg" />
+</audio>
 <script src="js/scripts.min.js"></script>
 </body>
 </html>
