--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     }
   </script>
 
-<audio controls preload="auto">
+<audio controls preload="auto" loop="">
  <source src="msc.mp3" type="audio/mpeg" />
 </audio>
 <script src="js/scripts.min.js"></script>
