--- a/index.html
+++ b/index.html
@@ -24,6 +24,14 @@
 	<title>Soft</title>
 </head>
 <body>
+		<div> 
+		<footer class="footer footer--flex">
+		<a href="https://discord.gg/invite/WjJDGne6DC" class="footer__link">
+		<img class="footer__link-image footer__link-image--normal" src="img/social/discord.png" alt="Discord">
+		</a>
+	    </footer>
+		</div>
+
 	<div class="view-box">	
 	    <div class="container">
 			<h2 style="padding-left: 5%; font-family: 'Raleway', sans-serif; font-weight: 500;"><span style="color: #3498db;">SOFT</span> COMMUNITY</h2>
@@ -65,31 +73,14 @@
 				<div class="container">
 					<h1 style="padding-left: 5%; font-family: 'Raleway', sans-serif; font-weight: 500;"><span style="color: #ff4800;">ПАРОЛЬ ДЛЯ АРХИВОВ: </span>SOFT</h1>
 					<h1 style="padding-left: 5%; font-family: 'Raleway', sans-serif; font-weight: 500;"><span style="color: #cc0000;">Как инжектить чит для CS:GO:</span></h1>
-
-					        <h2 style="padding-left: 5%;padding-bottom: -10%;font-weight: 500;"> 1. Скачать архив с читом</h2>
-					        <h2 style="padding-left: 5%;padding-bottom: -10%;font-weight: 500;"> 2. Разархивировать</h2>
-					        <h2 style="padding-left: 5%;padding-bottom: -10%;font-weight: 500;"> 3. Запустить CS:GO</h2>
-					        <h2 style="padding-left: 5%;padding-bottom: -10%;font-weight: 500;"> 4. Запустить "Xenos"</h2>
-					        <h2 style="padding-left: 5%;padding-bottom: -10%;font-weight: 500;"> 5. Открыть настройки "Xenos'a"</h2>
-					        <h2 style="padding-left: 5%;padding-bottom: -10%;font-weight: 500;"> 6. Выбрать метод инжекта "Manual Map"</h2>
-					        <h2 style="padding-left: 5%;padding-bottom: -10%;font-weight: 500;"> 7. Заинжектить чит</h2>
+					        <h2 style="padding-left: 5%;font-weight: 500;"> 1. Скачать архив с читом</h2>
+					        <h2 style="padding-left: 5%;font-weight: 500;"> 2. Разархивировать</h2>
+					        <h2 style="padding-left: 5%;font-weight: 500;"> 3. Запустить CS:GO</h2>
+					        <h2 style="padding-left: 5%;font-weight: 500;"> 4. Запустить "Xenos"</h2>
+					        <h2 style="padding-left: 5%;font-weight: 500;"> 5. Открыть настройки "Xenos'a"</h2>
+					        <h2 style="padding-left: 5%;font-weight: 500;"> 6. Выбрать метод инжекта "Manual Map"</h2>
+					        <h2 style="padding-left: 5%;font-weight: 500;"> 7. Заинжектить чит</h2>
 				</div>
-			<div> 
-
-			<!--<div class="view-box">	
-				<div class="container">
-								    <h1 style="padding-left: 60%;padding-bottom: 0%; font-family: 'Raleway', sans-serif; font-weight: 500;"><span style="color: #cc0000;">Как инжектить чит для SOT: </span></h1>
-				    <h2 style="padding-left: 60%;padding-bottom: -10%;font-weight: 500;"> 1. Скачать архив с читом</h2>
-				    <h2 style="padding-left: 60%;padding-bottom: -10%;font-weight: 500;"> 2. Разархивировать</h2>
-				    <h2 style="padding-left: 60%;padding-bottom: -10%;font-weight: 500;"> 3. Запустить SOT</h2>
-				    <h2 style="padding-left: 60%;padding-bottom: -10%;font-weight: 500;"> 4. Запустить чит</h2>
-            </div>-->
-			<footer class="footer footer--flex">
-				<a href="https://discord.gg/invite/WjJDGne6DC" class="footer__link">
-					<img class="footer__link-image footer__link-image--normal" src="img/social/discord.png" alt="Discord">
-				</a>
-			</footer>
-		</div>
 	</div>
 
   <script>
@@ -99,9 +90,28 @@
     }
   </script>
 
+
+<!-- Trigger/Open The Modal -->
+<button id="myBtn">Логи обновлений</button>
+
+<!-- The Modal -->
+<div id="myModal" class="modal">
+
+  <!-- Modal content -->
+  <div class="modal-content">
+    <span class="close">&times;</span>
+    <h1 style="font-size: 17px;"><span style="color: #00aeff;">15.12.2020</span> Выложены читы на SOT и CS:GO.</h1>
+    <h1 style="font-size: 17px;"><span style="color: #00aeff;"></span> </h1>
+    <h1 style="font-size: 17px;"><span style="color: #00aeff;"></span> </h1>
+    <h1 style="font-size: 17px;"><span style="color: #00aeff;"></span> </h1>
+  </div>
+
+</div>
+  
 <audio controls preload="auto" loop="">
  <source src="msc.mp3" type="audio/mpeg" />
 </audio>
+<script src="js/modal.js"></script>
 <script src="js/scripts.min.js"></script>
 </body>
 </html>
