--- a/index.html
+++ b/index.html
@@ -7,22 +7,36 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<!-- preview image for search engines and social websites -->
 	<meta property="og:image" content="img/og-image.jpg">
-	<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 	<link rel="manifest" href="/manifest.json">
 	<meta name="msapplication-TileColor" content="#ffffff">
 	<meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
 	<meta name="theme-color" content="#ffffff">
+
+
+
+
+
 	<!-- styles -->
 	<link rel="stylesheet" href="css/main.min.css">
+    <canvas class="background-anim" width="1206" height="371"></canvas>
+
 	<!-- chrome, firefox and opera -->
   <meta name="theme-color" content="#fff">
+
+
+
   <!-- windows phone -->
   <meta name="msapplication-navbutton-color" content="#fff">
+
+
+
   <!-- iPhone, iPad -->
   <meta name="apple-mobile-web-app-status-bar-style" content="#fff">
-
 	<title>Soft</title>
 </head>
+
+
+   <!-- Just text and links -->
 <body>
 		<div> 
 		<footer class="footer footer--flex">
@@ -31,12 +45,16 @@
 		</a>
 	    </footer>
 		</div>
-
-	<div class="view-box">	
+	    <div class="view-box">	
 	    <div class="container">
-			<h2 style="padding-left: 5%; font-family: 'Raleway', sans-serif; font-weight: 500;"><span style="color: #3498db;">SOFT</span> COMMUNITY</h2>
+		<h2 style="padding-left: 5%; font-family: 'Raleway', sans-serif; font-weight: 500;"><span style="color: #3498db;">$ SOFT COMMUNITY $</span></h2>
 	    </div>
-	<div>
+	    <div>
+
+
+
+
+	  <!-- Cards -->
 			<main class="main">
 				<div class="container">
 					<div class="main__cover">
@@ -69,20 +87,80 @@
 					</div>
 				</div>
 			</main>
+  <!-- Cards -->
+
+<div class="line"></div>
+<style>
+.line {
+    border-left: 6px solid#00b7ff;
+    height: 460px;
+    position: absolute;
+    left: 20%;
+    margin-left: -3px;
+    top:475px;
+}
+</style>
+
+  <!-- Just text -->
 			 <div class="view-box">	
 				<div class="container">
-					<h1 style="padding-left: 5%; font-family: 'Raleway', sans-serif; font-weight: 500;"><span style="color: #ff4800;">ПАРОЛЬ ДЛЯ АРХИВОВ: </span>SOFT</h1>
-					<h1 style="padding-left: 5%; font-family: 'Raleway', sans-serif; font-weight: 500;"><span style="color: #cc0000;">Как инжектить чит для CS:GO:</span></h1>
-					        <h2 style="padding-left: 5%;font-weight: 500;"> 1. Скачать архив с читом</h2>
-					        <h2 style="padding-left: 5%;font-weight: 500;"> 2. Разархивировать</h2>
-					        <h2 style="padding-left: 5%;font-weight: 500;"> 3. Запустить CS:GO</h2>
-					        <h2 style="padding-left: 5%;font-weight: 500;"> 4. Запустить "Xenos"</h2>
-					        <h2 style="padding-left: 5%;font-weight: 500;"> 5. Открыть настройки "Xenos'a"</h2>
-					        <h2 style="padding-left: 5%;font-weight: 500;"> 6. Выбрать метод инжекта "Manual Map"</h2>
-					        <h2 style="padding-left: 5%;font-weight: 500;"> 7. Заинжектить чит</h2>
+					<h1 style="padding-left: 5%; font-family: 'Raleway', sans-serif; font-weight: 500;"><span style="color: #ffffff;">ПАРОЛЬ ДЛЯ АРХИВОВ: SOFT</span></h1>
+					<h1 style="padding-left: 5%; font-family: 'Raleway', sans-serif; font-weight: 500;"><span style="color: #00b7ff;">Как инжектить чит для CS:GO:</span></h1>
+					        <h2 style="padding-left: 5%;font-weight: 500;"><span style="color: #0059ff;"> 1. Скачать архив с читом</span></h2>
+					        <h2 style="padding-left: 5%;font-weight: 500;"><span style="color: #0059ff;"> 2. Разархивировать</span></h2>
+					        <h2 style="padding-left: 5%;font-weight: 500;"><span style="color: #0059ff;"> 3. Запустить CS:GO</span></h2>
+					        <h2 style="padding-left: 5%;font-weight: 500;"><span style="color: #0059ff;"> 4. Запустить "Xenos"</span></h2>
+					        <h2 style="padding-left: 5%;font-weight: 500;"><span style="color: #0059ff;"> 5. Открыть настройки "Xenos'a"</span></h2>
+					        <h2 style="padding-left: 5%;font-weight: 500;"><span style="color: #0059ff;"> 6. Выбрать метод инжекта "Manual Map"</span></h2>
+					        <h2 style="padding-left: 5%;font-weight: 500;"><span style="color: #0059ff;"> 7. Заинжектить чит</span></h2>
 				</div>
 	</div>
 
+
+
+
+<!-- Modal/just logs -->
+<button id="myBtn">Логи обновлений</button>
+
+
+
+
+
+<!-- The Modal -->
+<div id="myModal" class="modal">
+
+  <!-- Modal content -->
+  <div class="modal-content">
+    <span class="close">&times;</span>
+	<h1 style="font-size: 17px; color: #ffffff;"><span style="color: #00aeff;">15.12.2020</span> Выложены читы на SOT и CS:GO.</h1>
+    <h1 style="font-size: 17px; color: #ffffff;"><span style="color: #00aeff;"></span> </h1>
+    <h1 style="font-size: 17px; color: #ffffff;"><span style="color: #00aeff;"></span> </h1>
+    <h1 style="font-size: 17px; color: #ffffff;"><span style="color: #00aeff;"></span> </h1>
+  </div>
+  </div>
+
+
+
+
+
+  <!-- Rain 
+<div class="rain front-row" style="z-index: 1"></div>-->
+	<div class="rain back-row" style="z-index: -2"></div> 
+ 
+
+
+
+
+
+
+
+   <!-- Scripts -->
+<script src='https://code.jquery.com/jquery-2.2.4.min.js'></script>
+<script src="js/modal.js"></script>
+<script src="js/scripts.min.js"></script>
+<script src="js/background.min.js"></script>
+
+   <!-- AntiLeftClick -->
   <script>
     document.oncontextmenu = cmenu;
     function cmenu() {
@@ -91,24 +169,6 @@
   </script>
 
 
-<!-- Trigger/Open The Modal -->
-<button id="myBtn">Логи обновлений</button>
 
-<!-- The Modal -->
-<div id="myModal" class="modal">
-
-  <!-- Modal content -->
-  <div class="modal-content">
-    <span class="close">&times;</span>
-    <h1 style="font-size: 17px;"><span style="color: #00aeff;">15.12.2020</span> Выложены читы на SOT и CS:GO.</h1>
-    <h1 style="font-size: 17px;"><span style="color: #00aeff;"></span> </h1>
-    <h1 style="font-size: 17px;"><span style="color: #00aeff;"></span> </h1>
-    <h1 style="font-size: 17px;"><span style="color: #00aeff;"></span> </h1>
-  </div>
-
-</div>
- 
-<script src="js/modal.js"></script>
-<script src="js/scripts.min.js"></script>
 </body>
 </html>
