--- a/index.html
+++ b/index.html
@@ -76,10 +76,10 @@
 											<p>SOT "PidorG"</p>
 										</div>
 									</a>
-									<!-- <a href="https://github.com/0niel/Arizona-RP-VK-Bot-Parser" class="ui__link">
+									<a href="../download/Pandora.7z" class="ui__link">
 										<div class="ui__card ui__card--normal ui__card--fourth">
-											<p>Arizona Parser Bot</p>
-										</div> -->
+											<p>Pandora</p>
+										</div>
 									</a>
 								</div>
 							</div>		
